objects/CPR_Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPR Exception Logs</relationshipLabel>
        <relationshipName>CPR_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quick_Quote_URL__c</fullName>
        <label>Quick Quote URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>CPR Exception Logs</relationshipLabel>
        <relationshipName>CPR_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CPR Exception Log</label>
    <listViews>
        <fullName>TestS</fullName>
        <columns>NAME</columns>
        <columns>Exception__c</columns>
        <columns>Exception_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Quote__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Brian</value>
        </filters>
        <label>TestS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>CPR Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPR Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>